--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+/*rmbr https://codepen.io/ehsanpo/pen/oNQPJbR*/
+
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: 023, 042, 092;
+  --background-end-rgb: 000, 013, 012;
+  --h1-rgb: 111, 911, 999;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,4 +27,11 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
+  color: rgb(var(--h1-rgb));
+  filter: drop-shadow(0 0 2px rgba(var(--h1-rgb), 0.3)); 
+  text-out: 0 0 5px red, 0.9;
 }
